welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: not found: value lookingFor
  while(i < nums.length && nums(i) != lookingFor){
                                      ^